--- a/css/main.css
+++ b/css/main.css
@@ -2,23 +2,77 @@
 
 html {
     font-family: 'Roboto', sans-serif;
+    font-size: 12px;
 }
 
-.col-3, .col-4, .col-6, .col-12 {
-    border: 1px solid black;
-    padding: 20px;
-    margin-bottom: 20px;
+body {
+    background-image:
+        linear-gradient(
+            rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)
+        ),
+        url("../images/fb.jpg");
+    background-size: cover;
+    color: white;
+    text-shadow: 0 2px 1px black;
 }
 
-header .col-12 {
-    border: none;
-    padding: 0px;
+header h1 {
+    padding-top: 20px;
 }
 
-.js-answer-picker-box .col-6 {
-    border-style: dashed;
+a {
+    display: inline-block;
+    border: 1px white solid;
+    background-color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    text-shadow: 0 0 0;
 }
 
-.hidden {
-    visibility: hidden;
+a:hover {
+    background-color: #DADADA;
+}
+
+.row {
+    background-image: linear-gradient(
+      rgba(255, 255, 255, 0.1), 
+      rgba(255, 255, 255, 0.1)
+    );
+    margin-bottom: 5px;
+}
+
+.quiz-start-button-box {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    text-align: center;
+}
+
+.quiz-start-button {
+    text-align: center;
+    font-size: 3rem;
+    margin: 20px auto;
+    padding: 50px;
+}
+
+.question-box {
+    margin-bottom: 0px;
+}
+
+.answer-choice {
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    padding-left: 10px;
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+}
+
+.answers-box {
+    padding-bottom: 20px;
+}
+
+@media only screen and (min-width: 640px) {
+    html { font-size: 16px; }
+    header > .row { margin-top: 50px; }/
 }
