--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,11 @@ a:hover {
     padding-bottom: 20px;
 }
 
+.continue-box {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 @media only screen and (min-width: 640px) {
     html { font-size: 16px; }
     header > .row { margin-top: 50px; }/
