completed game logic

--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,10 @@ a:hover {
     padding-bottom: 20px;
 }
 
+.hidden {
+    display: none;
+}
+
 @media only screen and (min-width: 640px) {
     html { font-size: 16px; }
     header > .row { margin-top: 50px; }/
